@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-PluginBundle-Author-ETHER
 
 {{$NEXT}}
+          - new "GIVING THANKS" section added in woven pod
 
 0.168     2025-08-31 00:35:06Z
           - minting profile updates:
